<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Photo Gallery</string>
    <string name="create_album">Create Album</string>
    <string name="rename_album">Rename Album</string>
    <string name="delete_album">Delete Album</string>
    <string name="album_name">Album Name</string>
    <string name="add_photo">Add Photo</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="move_photo">Move Photo</string>
    <string name="add_tag">Add Tag</string>
    <string name="remove_tag">Remove Tag</string>
    <string name="search_photos">Search Photos</string>
    <string name="person">Person</string>
    <string name="location">Location</string>
    <string name="tag_value">Tag Value</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="confirm_delete_album">Are you sure you want to delete album "%s"?</string>
    <string name="album_name_exists">An album with this name already exists</string>
    <string name="tag_type">Tag Type</string>
    <string name="tag_already_exists">This tag already exists</string>
    <string name="confirm_delete_tag">Are you sure you want to delete this tag?</string>
    <string name="select_destination_album">Select Destination Album</string>
    <string name="photo_moved_successfully">Photo moved successfully</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="search_criteria">Search Criteria:</string>
    <string name="no_photos_found">No photos found matching the criteria</string>
    <string name="search_results">Search Results</string>
</resources> 